@@ -1,0 +1,4 @@
+
+void platform_windows()
+{
+}
